--- a/web-client/src/App.css
+++ b/web-client/src/App.css
@@ -8,3 +8,22 @@ body{
 .cabin {
   font-family: "Cabin", sans-serif;
 }
+
+::-webkit-scrollbar {
+  width: 0.5em;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(227, 233, 229, 0.5);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(168, 160, 160, 0.2);
+}
+.hash-span {
+  margin-top: -100px;
+  padding-bottom: 100px;
+  display: block;
+}
