--- a/app-client/assets/styles/itemlist.css
+++ b/app-client/assets/styles/itemlist.css
@@ -56,7 +56,7 @@
   }
   
   #itemContainer {
-    background-color: #0B6633;
+    background-color:var(--secondary-color);
     border-radius: 10px;
     padding: 20px;
     margin-right: 10%;
@@ -71,6 +71,13 @@
     font-size: 18px;
     color: white;
     font-family: 'Bebas';
+  }
+
+  #price {
+    font-size: 18px;
+    color:var(--accent-white-color);
+    font-family: 'Bebas';
+    
   }
   
   #addButton {
@@ -92,6 +99,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    
   }
   
   #counterButton {
