--- a/app-client/assets/styles/final_page.css
+++ b/app-client/assets/styles/final_page.css
@@ -23,3 +23,16 @@
     color: var(--accent-green-color);
     margin-bottom: 5px;
   }
+
+#tableContainer{
+    font-size: 20px;
+    font-style: bold;
+    justify-content: center;
+}
+
+#itemText{
+    color: var(--accent-white-color);
+}
+#tableRow{
+    background-color: var(--accent-green-color);
+}
