--- a/app-client/assets/styles/FoodCourts.css
+++ b/app-client/assets/styles/FoodCourts.css
@@ -27,55 +27,52 @@
     padding: 10px;
     margin-right: 2%;
     margin-left: 2%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
     margin-bottom: 5%;
+    justify-content: center;
 }
 
 
 #fc_searchInput {
     flex: 1;
-    font-size: 18px;
-    padding-left: 10px;
-    padding-right: 10px;
+    font-size: medium;
     color: var(--accent-green-color);
   }
 
-#fc_listcontainer {
-    display: flex;
-    flex-wrap: wrap; 
-    gap: 10%; 
-   
-}
-
 #fc_card {
-    background-color:var(--secondary-color);
+    background-color: var(--accent-white-color);
     border-radius: 10px;
     padding: 20px;
     margin-top: 2%;
     margin-right: 3%;
     margin-left: 3%;
-    display: grid;
-    align-items: center;
+    display: flex;
+    flex-direction: row;
+    gap: 5%;
+
+
 }
 
 #fc_cardImage {
-    width: 65;
-    height: 75;
     border-radius: 10;
-    margin-right: 15,
+    margin-right: 15;
+
 }
 
 #fc_cardTitle {
-    font-size: 20;
-    color: var(--accent-white-color);
+    font-size: large;
+    color: var(--accent-green-color);
     font-weight: "bold";
     margin-bottom: 4;
 }
 
-#cardText {
-    font-size: 16;
+#fc_cardText {
+    font-size: large;
     color: var(--accent-green-color);
     margin-bottom: 2;
 }
+
+#fc_mapText {
+    font-size: large;
+    color: var(--tertiary-color);
+}
+
