--- a/app-client/assets/styles/checkout.css
+++ b/app-client/assets/styles/checkout.css
@@ -6,74 +6,90 @@
   --accent-white-color: #E3E9E5;
 }
 
-#container {
-  flex: 1;
+#CH-maincontainer{
+  background-color: var(--primary-color);
+  height: 100%;
+  width: 100%;
+}
+#CH-container {
   background-color: var(--primary-color);
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 50px;
 }
 
-#foodCourtTitle {
-  font-size: 20px;
+#CH-foodCourtDetails {
+  font-size: larger;
   font-weight: bold;
   color: var(--accent-green-color);
-  margin-bottom: 5px;
+  margin-bottom: 2%;
 }
 
-#details {
-  font-size: 14px;
+#CH-details {
+  font-size: medium;
   color: var(--accent-green-color);
 }
 
-#mapLink {
-  font-size: 14px;
-  color:var(--tertiary-color);
+#CH-mapLink {
+  font-size: medium;
+  color:var(--secondary-color);
   text-decoration: underline;
-  margin-bottom: 20px;
+  margin-bottom: 10%;
   cursor: pointer;
 }
 
 /* Table styling */
-#tableContainer {
-  border: 1px solid var(--accent-green-color);
+#CH-tableContainer {
+  border: 2px solid var(--accent-green-color);
   border-radius: 5px;
-  margin-bottom: 15px;
+  padding: 2%;
+  margin-bottom: 10%;
   overflow: hidden;
-  background-color: var(--primary-color);
-}
-
-#tableHeader, #tableRow {
-  display: flex;
-  justify-content: space-between;
-  padding: 5px;
-}
-
-#tableHeader {
   background-color: var(--accent-white-color);
+
+
 }
 
-#tableText, #tableItem {
-  font-size: 16px;
+#CH-tableRow {
+
+  padding: 2%
+}
+
+#CH-tableHeader {
+  display: grid;
+  grid-template-columns: 1.7fr 1.5fr 1fr;
+  background-color: var(--accent-green-color);
+  padding: 1%;
+}
+
+#CH-tableText, #CH-tableItem {
+  
+  font-size: medium;
   font-weight: bold;
+  color: var(--accent-white-color);
+}
+
+#CH-itemCont{
+  display: grid;
+  grid-template-columns: 2fr 1.5fr 1fr;
+}
+#CH-itemText, #CH-tableRow{
+
+  font-size: medium;
   color: var(--accent-green-color);
+
 }
 
-#itemText, #tableRow{
-  font-size: 14px;
-  justify-content: space-between;
-}
-
-#totalText {
-  font-size: 18px;
+#CH-totalText {
+  font-size: large;
   font-weight: bold;
   color: var(--accent-green-color);
   margin: 10px 0;
 }
 
-#phoneInput {
+#CH-phoneInput {
   height: 40px;
-  border: 1px solid var(--accent-white-color);
+  border: 1px solid var(--secondary-color);
   border-radius: 5px;
   padding: 0 10px;
   margin-bottom: 15px;
@@ -81,7 +97,7 @@
 }
 
 /* Button Styles */
-#etaButton, #paymentButton {
+#CH-etaButton, #CH-paymentButton {
   border-radius: 5px;
   padding: 10px;
   display: flex;
@@ -91,27 +107,24 @@
   margin-bottom: 10px;
 }
 
-#etaButton {
+#CH-etaButton {
   background-color: var(--tertiary-color);
+  padding: 15px;
 }
 
-#paymentButton {
+#CH-paymentButton {
   background-color: var(--accent-green-color);
   padding: 15px;
 }
 
-#buttonText {
+#CH-buttonText {
   color:var(--accent-white-color);
-  font-size: 16px;
+  font-size: large;
 }
 
-#paymentButtonText {
+#CH-paymentButtonText {
   color: var(--accent-white-color);
-  font-size: 18px;
-  font-weight: bold;
+  font-size: large;
+
 }
 
-#item{
- padding: 10;
-  font-size: 16 
-}
