--- a/app-client/assets/styles/itemlist.css
+++ b/app-client/assets/styles/itemlist.css
@@ -29,11 +29,11 @@
   #IL-foodCourtDetails {
     font-size: 16px;
     color: var(--accent-green-color);
-    margin-bottom: 20px;
+    
   }
   
   #IL-mapLink {
-    color: var(--tertiary-color);
+    color: var(--secondary-color);
     text-decoration: underline;
   }
   
@@ -67,7 +67,7 @@
     margin-right: 2%;
     margin-left: 2%;
     display: grid;
-    grid-template-columns: 2fr 1.5fr 1fr;
+    grid-template-columns: 2fr 1.5fr 1.5fr;
     align-items: center;
   }
   
