--- a/app-client/assets/styles/FoodCourts.css
+++ b/app-client/assets/styles/FoodCourts.css
@@ -1,78 +1,72 @@
 :root {
-    --primary-color: #B3D4C3;
-    --secondary-color: #016B43;
-    --tertiary-color: #1BCF5A;
-    --accent-green-color: #003400;
-    --accent-white-color: #E3E9E5;
+  --primary-color: #b3d4c3;
+  --secondary-color: #016b43;
+  --tertiary-color: #1bcf5a;
+  --accent-green-color: #003400;
+  --accent-white-color: #e3e9e5;
 }
-#fc_container{
-    background-color: var(--primary-color);
-    height: 100%;
-    width: 100%;
-  }
-
-#fc_maincontainer{
-    background-color: var(--primary-color);
-    padding: 10%;
-    display: flex;
-    justify-content: space-between;
-    gap: 2px;
-    height: 100%;
-
+#fc_container {
+  background-color: var(--primary-color);
+  height: 100%;
+  width: 100%;
 }
 
-#fc_searchContainer{
-    background-color: var(--accent-white-color);
-    border-radius: 10px;
-    padding: 10px;
-    margin-right: 2%;
-    margin-left: 2%;
-    margin-bottom: 5%;
-    justify-content: center;
+#fc_maincontainer {
+  background-color: var(--primary-color);
+  padding: 10%;
+  display: flex;
+  justify-content: space-between;
+  gap: 2px;
+  height: 100%;
 }
 
+#fc_searchContainer {
+  background-color: var(--accent-white-color);
+  border-radius: 10px;
+  padding: 10px;
+  margin-right: 2%;
+  margin-left: 2%;
+  margin-bottom: 5%;
+  justify-content: center;
+}
 
 #fc_searchInput {
-    flex: 1;
-    font-size: medium;
-    color: var(--accent-green-color);
-  }
+  flex: 1;
+  font-size: medium;
+  color: var(--accent-green-color);
+}
 
 #fc_card {
-    background-color: var(--accent-white-color);
-    border-radius: 10px;
-    padding: 20px;
-    margin-top: 2%;
-    margin-right: 3%;
-    margin-left: 3%;
-    display: flex;
-    flex-direction: row;
-    gap: 5%;
-
-
+  background-color: var(--accent-white-color);
+  border-radius: 10px;
+  padding: 20px;
+  margin-top: 2%;
+  margin-right: 3%;
+  margin-left: 3%;
+  display: flex;
+  flex-direction: row;
+  gap: 5%;
 }
 
 #fc_cardImage {
-    border-radius: 10;
-    margin-right: 15;
-
+  border-radius: 10;
+  margin-right: 15;
 }
 
 #fc_cardTitle {
-    font-size: large;
-    color: var(--accent-green-color);
-    font-weight: "bold";
-    margin-bottom: 4;
+  font-size: large;
+  color: var(--accent-green-color);
+  font-weight: "bold";
+  margin-bottom: 4;
 }
 
 #fc_cardText {
-    font-size: large;
-    color: var(--accent-green-color);
-    margin-bottom: 2;
+  font-size: large;
+  color: var(--accent-green-color);
+  margin-bottom: 2;
 }
 
 #fc_mapText {
-    font-size: large;
-    color: var(--tertiary-color);
+  font-size: large;
+  color: var(--tertiary-color);
 }
-
